--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/parser.js",
   "types": "dist/parser.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": ["discord", "strings", "parser"],
   "author": "typicalninja21",
